# minisearch

./: .gitignore  README.md  banchmarks.txt  main.py  mypy.ini
.github/workflows/: CI.yml  install_wheel.py  requirements.txt
docs/: howitworks.md
minisearch/: Cargo.toml  __init__.py  index.py  main.py  parser.py  pyproject.toml  search.py  stemmer.py  stop.py  tokenize.py
minisearch/minisearch_rs/: Cargo.toml  pyproject.toml
minisearch/minisearch_rs/src/: analysis.rs  automaton.rs  documents.rs  index.rs  intersect.rs  lib.rs  matching.rs  mis.rs  parser.rs  query.rs  scoring.rs  search.rs  stemmer.rs  tokenizer.rs  trie.rs  utils.rs
minisearch/minisearch_rs/src/analysis/: tokenizer.rs
minisearch/minisearch_rs/src/core/: index.rs  search.rs
minisearch/minisearch_rs/src/matching/: intersect.rs  mis.rs
minisearch/minisearch_rs/src/query/: parser.rs  scoring.rs
minisearch/minisearch_rs/src/storage/: documents.rs
minisearch/minisearch_rs/src/utils/: automaton.rs  hasher.rs  lru.rs  writer.rs
minisearch/python/minisearch/: __init__.py  errors.py  main.py
minisearch/src/: config.rs  errors.rs  lib.rs  utils.rs
minisearch/src/analysis/: tokenizer.rs
minisearch/src/core/: index.rs  search.rs
minisearch/src/matching/: intersect.rs  mis.rs
minisearch/src/storage/: documents.rs
minisearch/src/utils/: fileext.rs  hasher.rs  trie.rs
tests/: test_performance.py  test_search.py
tests/assets/: articles_1k.json  articles_test.json  merge_test_conf.toml  queries.txt  results_1k.json  results_1k_after_delete.json
whoosh_indexdir/: _MAIN_1.toc
(+4 files in other folders)
