[package]
name = "minisearch_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "minisearch_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
nohash-hasher = "0.2.0"
ulid = "1.2.1"
unicode-segmentation = "1.12.0"
hashbrown = "0.16.0"
chumsky = "0.11.1"
lz4_flex = "0.12.0"
bincode = "2.0.1"